# AdaRec

./: README.md  pyproject.toml
config/: customer_feature_config.yaml  model_config.yaml  outcome_config.yaml  treatment_config.yaml
notebook/: getting_started.ipynb  prepare_example_dataset.ipynb
research/: main.py  main.sh  requirements.txt
research/script/: causal_inference.py  dataloader.py  evaluate.py  finetune_llama.py  inference.py  prompt_template.py  run.py  utils.py
script/: README.md  prepare_example_dataset.py
src/counterfactual/: __init__.py  base_profile_generator.py  batch_predictor.py  batch_profile_generator.py  similarity_searcher.py  util.py
src/data_processing/: __init__.py  transform.py
src/evaluation/: __init__.py  metrics.py
