[project]
name = "adarec"
version = "0.1.0"
description = "Counterfactual inference framework for customer outcomes with few-shot in-context learning"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "annoy>=1.17.3",
    "boto3>=1.40.18",
    "catboost>=1.2.8",
    "datasets>=2.14.0,<4.0.0",
    "dspy>=2.6.13",
    "fastparquet>=2024.11.0",
    "numpy==1.26.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=14.0.0,<15.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "torch==2.5.1",
    "tqdm>=4.67.1",
]
